--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -59,6 +59,21 @@
 
         <section class="menu container mx-auto py-8">
             <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+            <div>
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div>
+                    <h2 class="mb-4 text-lg">Margherita</h2>
+                    <span class="py-1 px-4 rounded-full uppercase text-xs">small</span>
+                    <div>
+                        <span>₹250</span>
+                        <button>
+                            <span>+</span>
+                            <span>Add</span>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
         </section>
         <script src="/js/app.js "></script>
 
