--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -58,20 +58,105 @@
         </section>
 
         <section class="menu container mx-auto py-8">
-            <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
-            <div>
-                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-                <div>
-                    <h2 class="mb-4 text-lg">Margherita</h2>
-                    <span class="py-1 px-4 rounded-full uppercase text-xs">small</span>
-                    <div>
-                        <span>₹250</span>
-                        <button>
-                            <span>+</span>
-                            <span>Add</span>
-                        </button>
+            <h1 class="text-xl font-bold">All Pizzas</h1>
+            <div class="grid grid-cols-4 gap-12">
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
                     </div>
-
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-64">
+                    <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                    <div class="text-center">
+                        <h2 class="mb-4 text-lg">Margherita</h2>
+                        <span class=" size py-1 px-4 rounded-full uppercase text-xs">small</span>
+                        <div class="flex items-center justify-around mt-5">
+                            <span class="font-bold text-lg">₹250</span>
+                            <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
+                                <span>+</span>
+                                <span class="ml-4">Add</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
