--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@ body {
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #232323;
+  height: 4000px;
 }
 
 nav li:last-child a {
@@ -20,4 +21,19 @@ nav li a:hover {
 
 section.hero {
   background: #f8f8f8;
+}
+
+.size {
+  background: #f8f8f8;
+}
+
+.add-to-cart {
+  border: 2px solid #fe5f1e;
+  color: #fe5f1e;
+  transition: all 0.3s ease-in-out;
+}
+.add-to-cart:hover {
+  background: #fe5f1e;
+  border-color: #fff;
+  color: #fff;
 }
