--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -45,3 +45,12 @@ section.hero {
 
     }
 }
+
+.btn-primary {
+    background: $primary;
+    transition: $smooth;
+
+    &:hover {
+        background: $primary-hover;
+    }
+}
