Add to cart functionality dynamically

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,6 @@
 @import './variables';
+@import '~noty/src/noty.scss';
+@import '~noty/src/themes/mint.scss';
 
 body {
     font-family: 'Lato', sans-serif;
@@ -44,6 +46,10 @@ section.hero {
         color: $pure;
 
     }
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .btn-primary {
@@ -74,4 +80,9 @@ section.login {
             color: $primary-hover;
         }
     }
+}
+
+.noty_theme__mint {
+    border-radius: 50px !important;
+    padding: left 8px !important;
 }
